# afrispeech-datagen

./: .gitignore  README.md  pyproject.toml  requirements.txt
afrispeech_datagen/: __init__.py  __main__.py  cli.py  generator.py
notebooks/: afrispeech_datagen.ipynb  voxcpm_synth.ipynb
tests/: test_core.py
voxcpm_synth/: __init__.py  __main__.py  cli.py  generator.py
