[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "afrispeech-datagen"
version = "0.1.0"
description = "Generate synthetic TTS training data from text datasets with OmniVoice — voice-cloned male/female speakers, parallel instances, resume."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
dependencies = [
    "omnivoice @ git+https://github.com/k2-fsa/OmniVoice.git",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy",
    "scipy",
    "tqdm",
    "torch",
    "torchaudio",
    "transformers",
    "tokenizers",
    "accelerate",
]

[project.scripts]
afrispeech-datagen = "afrispeech_datagen.cli:main"

[tool.setuptools]
packages = ["afrispeech_datagen"]

[tool.setuptools.package-data]
afrispeech_datagen = ["speakers/*.wav", "speakers/*.txt"]
