[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "afrispeech-datagen"
version = "0.1.0"
description = "Generate synthetic TTS training data from text datasets with OmniVoice — voice-cloned male/female speakers, parallel instances, resume."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
dependencies = [
    "omnivoice @ git+https://github.com/groxaxo/omnivoice-streaming.git",
    "datasets>=2.19",
    "huggingface_hub>=0.23",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy",
    "scipy",
    "tqdm",
    "torch",
    "torchaudio",
    # omnivoice needs transformers 5.x; pin to a release that exposes both
    # AutoFeatureExtractor and HiggsAudioV2TokenizerModel at the top level
    # (some intermediate 5.x releases dropped AutoFeatureExtractor).
    "transformers==5.7.0",
    "tokenizers",
    "accelerate",
]

[project.scripts]
afrispeech-datagen = "afrispeech_datagen.cli:main"

[tool.setuptools]
packages = ["afrispeech_datagen"]

[tool.setuptools.package-data]
afrispeech_datagen = ["speakers/*.wav", "speakers/*.txt"]
